test/classes/deinitializers/deinitParenlessError.good
deinitParenlessError.chpl:4: error: deinitializers must have parentheses
